--- a/package.json
+++ b/package.json
@@ -32,13 +32,13 @@
     "npm": ">=3.10.10"
   },
   "dependencies": {
-    "likewise": "latest",
-    "tapeling": "latest"
+    "likewise": "^1.0.1",
+    "tapeling": "^1.0.4"
   },
   "devDependencies": {
-    "@thewhodidthis/eslint-config": "latest",
-    "eslint": "latest",
-    "rollup": "latest"
+    "@thewhodidthis/eslint-config": "^0.0.9",
+    "eslint": "^6.8.0",
+    "rollup": "^1.29.1"
   },
   "keywords": [
     "tap",
