--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "tapeling": "^1.0.4"
   },
   "devDependencies": {
-    "@thewhodidthis/eslint-config": "^0.0.9",
+    "@thewhodidthis/eslint-config": "latest",
     "eslint": "^6.8.0",
     "rollup": "^1.29.1"
   },
