--- a/package.json
+++ b/package.json
@@ -2,50 +2,48 @@
   "name": "tapeless",
   "version": "0.0.7",
   "description": "Helps with tape like testing",
-  "main": "index",
-  "module": "index.mjs",
-  "browser": {
-    "./index.js": "./browser/index.js",
-    "./index.mjs": "./browser/index.mjs"
-  },
-  "homepage": "https://github.com/thewhodidthis/tapeless#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thewhodidthis/tapeless.git"
-  },
-  "bugs": {
-    "url": "https://github.com/thewhodidthis/tapeless/issues"
-  },
-  "scripts": {
-    "pretest": "eslint test.js",
-    "test": "node test",
-    "prestart": "eslint . --ext mjs",
-    "start": "rollup -c",
-    "preexample": "eslint example/*",
-    "example": "node example"
-  },
-  "eslintConfig": {
-    "extends": "@thewhodidthis"
-  },
-  "engines": {
-    "node": ">=6.11.0",
-    "npm": ">=3.10.10"
-  },
-  "dependencies": {
-    "likewise": "^1.0.3",
-    "tapeling": "^1.0.6"
-  },
-  "devDependencies": {
-    "@thewhodidthis/eslint-config": "^0.0.11",
-    "eslint": "^6.8.0",
-    "rollup": "^1.31.0"
-  },
   "keywords": [
     "tap",
     "tape",
     "test",
     "tool"
   ],
+  "homepage": "https://github.com/thewhodidthis/tapeless#readme",
+  "bugs": {
+    "url": "https://github.com/thewhodidthis/tapeless/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thewhodidthis/tapeless.git"
+  },
+  "license": "Unlicense",
   "author": "sChzs BkgNns <sotirios.bakagiannis@gmail.com> (https://www.thewhodidthis.com)",
-  "license": "Unlicense"
+  "main": "index",
+  "module": "index.mjs",
+  "browser": "browser/index",
+  "scripts": {
+    "preexample": "eslint example",
+    "example": "node example",
+    "prestart": "eslint . --ext mjs",
+    "start": "rollup -c",
+    "pretest": "eslint test.js",
+    "test": "node test",
+    "posttest": "eslint package.json"
+  },
+  "eslintConfig": {
+    "extends": "@thewhodidthis"
+  },
+  "dependencies": {
+    "likewise": "^1.0.3",
+    "tapeling": "^1.0.6"
+  },
+  "devDependencies": {
+    "@thewhodidthis/eslint-config": "^0.0.15",
+    "eslint": "^6.8.0",
+    "rollup": "^1.31.1"
+  },
+  "engines": {
+    "node": ">=6.11.0",
+    "npm": ">=3.10.10"
+  }
 }
