--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "prestart": "eslint . --ext mjs",
     "start": "rollup -c",
     "pretest": "eslint test.js",
-    "test": "node test",
-    "posttest": "eslint package.json"
+    "test": "node test"
   },
   "eslintConfig": {
     "extends": "@thewhodidthis"
