--- a/package.json
+++ b/package.json
@@ -19,12 +19,8 @@
   "license": "ISC",
   "author": "Sotiri Bakagiannis <sotirios.bakagiannis@gmail.com> (http://thewhodidthis.com)",
   "type": "module",
-  "exports": {
-    ".": "./main.js",
-    "./browser": "./browser.js"
-  },
+  "exports": "./main.js",
   "main": "./main.js",
-  "browser": "./browser.js",
   "scripts": {
     "start": "node example.js",
     "test": "node test.js"
